<resources>

    <string name="app_name">Train planner</string>

    <string name="screen_title_dashboard">Dashboard</string>

    <string name="input_hint_user_name">User name</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_departure_station">From station</string>
    <string name="input_hint_arrival_station">To station</string>

    <string name="button_login">Login</string>
    <string name="btn_find_trips">Find trip</string>

    <string name="menu_item_planner">Planner</string>
    <string name="menu_item_map">Map</string>
    <string name="menu_item_disruptions">Disruptions</string>

    <string name="alert_confirm_exit_title">Conform exit</string>
    <string name="alert_confirm_exit_message">Are you sure you want to quit?</string>
    <string name="alert_confirm_exit_yes">Yes</string>
    <string name="alert_confirm_exit_no">No</string>

    <string name="toast_message_login_success">Login Successful!</string>

    <string name="disruptions_ongoing_notifications">Ongoing notifications</string>
    <string name="disruptions_disturbances">Disturbances</string>
    <string name="disruptions_engineering_works">Engineering works</string>

</resources>